--- a/style.css
+++ b/style.css
@@ -1,17 +1,78 @@
-.element1 {
-=
-  background-color: red;
-
+/* UTILITIES */
+* {
+ margin: 0;
+ padding: 0;
+ box-sizing: border-box;
+}
+body {
+ font-family: 'segoe ui';
+}
+a {
+ text-decoration: none;
+}
+li {
+ list-style: none;
 }
 
-.element2 {
-  
-  background-color: yellow;
+
+/* NAVBAR STYLING STARTS */
+.navbar {
+ display: flex;
+ align-items: center;
+ justify-content: space-between;
+ padding: 20px;
+ background-color: blue;
+ color: #fff;
+}
+.nav-links a {
+ color:  white;
+}
+/* LOGO */
+.logo {
+ width : 50px;
+height : 50px;
+position: relative;
+top: 8px;
   
 }
 
-.element3 {
-  
-  background-color: blue;
-  
+/* NAVBAR MENU */
+.menu {
+ display: flex;
+ gap: 1em;
+ font-size: 18px;
+}
+.menu li:hover {
+ background-color: 	#87CEFA;
+ border-radius: 5px;
+ transition: 0.3s ease;
+}
+.menu li {
+ padding: 5px 14px;
+}
+/* DROPDOWN MENU */
+.services {
+ position: relative; 
+}
+.dropdown {
+ background-color: 	#87CEFA;
+ padding: 1em 0;
+ position: absolute; /*WITH RESPECT TO PARENT*/
+ display: none;
+ border-radius: 8px;
+ top: 35px;
+}
+.dropdown li + li {
+ margin-top: 10px;
+}
+.dropdown li {
+ padding: 0.5em 1em;
+ width: 8em;
+ text-align: center;
+}
+.dropdown li:hover {
+ background-color:#4682B4;
+}
+.services:hover .dropdown {
+ display: block;
 }
